<resources>
    <string name="app_name">Calculate Sum</string>
    <string name="sum_sign">+</string>
    <string name="entry_text">Enter a number</string>
    <string name="btn_text">Calculate Sum</string>
    <string name="sum_text">Sum</string>
    <string name="show_history">Show Calculation History</string>
    <string name="history_save_file">CalculationHistory.txt</string>
    <string name="name_text_file">userName.txt</string>
    <string name="location_text">GPS LOCATION</string>
    <string name="lattitude_text">Lattitude</string>
    <string name="longtitude_text">Longtitude</string>
    <string name="gps_button_text">SHOW GPS LOCATION</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="location_txt">Location</string>
    <string name="min_temp_txt">Min Temp</string>
    <string name="max_temp_txt">Max Temp</string>

</resources>
